Fix to resolve display z-index in Safari/iOS

--- a/src/slot-machine.scss
+++ b/src/slot-machine.scss
@@ -41,6 +41,7 @@
   .slots {
     height: inherit;
     z-index: 1;
+    --webkit-transform: translate3d(0, 0, 0);
 
     ul.reel {
       display: inline-block;
